--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,17 @@
   display: flex;
   justify-content: space-between; 
   align-items: center; 
-  height: 80px; 
+  height: 150px; 
 }
 
-/* Menú de navegación (Ccentro) */
+/* Menú de navegación (Centro) */
+.header__logo img{
+  height: 20%;
+  width: 20%;
+  display: flex;
+  
+}
+
 .header__nav {
   flex: 1; 
   display: flex;
@@ -27,6 +34,8 @@
   display: flex;
   gap: 1.5rem;
   list-style: none;
+  font-size: large;
+font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .nav__list a {
@@ -38,7 +47,7 @@
 }
 
 .nav__list a:hover {
-  color: #ffcccc; 
+  color: #272626; 
 }
 
 
