--- a/css/styles.css
+++ b/css/styles.css
@@ -7,35 +7,34 @@
 
 /* Header principal */
 .header {
-  background-color: #d40000; /* Rojo tiroles */
+  background-color: #d40000;
   color: white;
-  padding: 1rem 2rem;
+  padding: 2rem 2rem;
   display: flex;
-  justify-content: space-between; 
-  align-items: center; 
-  height: 150px; 
+  justify-content: space-between;
+  align-items: center;
+  height: 175px;
+  gap: 2rem;
 }
 
-/* Menú de navegación (Centro) */
-.header__logo img{
+/* Menú de navegación */
+.header__logo img {
   height: 20%;
   width: 20%;
   display: flex;
-  
 }
 
 .header__nav {
-  flex: 1; 
   display: flex;
   justify-content: center;
 }
 
 .nav__list {
   display: flex;
-  gap: 1.5rem;
+  gap: 2rem;
   list-style: none;
   font-size: large;
-font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .nav__list a {
@@ -47,8 +46,16 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .nav__list a:hover {
-  color: #272626; 
+  color: #272626;
 }
 
+.contact__img {
+  flex: 0 0 40%;
+}
 
-
+h1 {
+  text-align: center;
+  margin-bottom: 3rem;
+  color: #2c3e50;
+  font-size: 2.5rem;
+}
