--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   color: white;
   padding: 2rem 2rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 175px;
   gap: 2rem;
@@ -24,28 +24,26 @@
   display: flex;
 }
 
-.header__nav {
-  display: flex;
-  justify-content: center;
-}
-
 .nav__list {
   display: flex;
-  gap: 2rem;
+  justify-content: center;
+
+  gap: 1rem;
   list-style: none;
   font-size: large;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .nav__list a {
-  color: white;
+  color: rgb(253, 253, 253);
   text-decoration: none;
   font-weight: bold;
   font-size: 1.1rem;
   transition: color 0.3s;
+  display: flex;
 }
 
-.nav__list a:hover {
+.nav__ul a:hover {
   color: #272626;
 }
 
@@ -53,9 +51,33 @@
   flex: 0 0 40%;
 }
 
+/* Contenido de la página */
 h1 {
   text-align: center;
   margin-bottom: 3rem;
   color: #2c3e50;
-  font-size: 2.5rem;
+  font-size: 1.8rem;
+}
+
+.content {
+  flex: 1;
+  gap: 2rem;
+  line-height: 1.6;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.content__img {
+  flex: 0 0 40%;
+  gap: 2rem;
+  text-align: center;
+  max-width: 100%;
+  height: auto;
+}
+
+h3 {
+  text-align: center;
+}
+
+h4 {
+  text-align: center;
 }
